# coach

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  PHASE2_PLAN.md  PROJECT_COACH.md  README.md  REQUIREMENTS.md  WRITEUP_PHASE1.md  fly.toml  pyproject.toml
deploy/: cloudflare-worker.js
evals/: generate_queries.py  queries.jsonl  retrieval.py
evals/results/: baseline-2026-04-23.json  baseline-clean-2026-04-24.json  phase2-10ep-2026-04-24.json  phase2-2ep-2026-04-24.json
frontend/: biome.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  main.tsx
frontend/src/api/: client.ts  index.ts  mock.ts
frontend/src/components/: AnalysisView.test.tsx  AnalysisView.tsx  EvalDropList.tsx  PgnInput.test.tsx  PgnInput.tsx  SourcesAccordion.tsx
frontend/src/components/board/: ChessBoard.tsx  MoveList.tsx
frontend/src/data/: sampleGame.ts
frontend/src/game/: ai.ts  engine.test.ts  engine.ts  persist.test.ts  persist.ts
frontend/src/hooks/: useAnalyze.ts  useGame.ts
frontend/src/lib/: pgn.test.ts  pgn.ts
frontend/src/pages/: AnalyzePage.tsx  MetricsPage.tsx  PlayPage.tsx
frontend/src/types/: api.ts
pipelines/: ingest.py
scripts/: build_clean_index.py  build_encoder_index.py  build_index.py  download_corpus.py
src/coach/: agent.py  cli.py  commentary.py  config.py  engine.py  retrieval.py  web.py
src/coach/static/: index.html
tests/: test_smoke.py
training/: board_tensor.py  dataset.py  encoder.py  loss.py  retriever.py  train.py
(+3 files in other folders)
